# CPSim

./: .gitignore  README.md  pyproject.toml  readthedocs.yml  requirements.txt
docs/: requirements.txt
docs/source/: 0_exmaple.rst  1_intro.rst  2_basic.rst  2_install.rst  3_basic.rst  4_advanced.rst  5_example.rst  9_api.rst  conf.py  index.rst
docs/source/3_basic/: attack.rst  controller.rst  formal.rst  linear_model.rst  noise.rst  nonlinear_model.rst
docs/source/5_example/: 3_MPC_recovery.rst  4_fast_recovery.rst  5_SVL_simulator.rst  6_testbed_vehicle.rst
docs/source/apidoc/: cpsim.controllers.rst  cpsim.formal.rst  cpsim.info.rst  cpsim.models.linear.rst  cpsim.models.nonlinear.rst  cpsim.models.rst  cpsim.observers.rst  cpsim.rst  cpsim.utils.rst  modules.rst
myenv/: pyvenv.cfg
simulators/nonlinear/: inverted_pendulum.py
src/: requirements.txt
src/cpsim/: .__afsA92E  __init__.py  actuator_attack.py  attack.py  simulator.py
src/cpsim/controllers/: LP_cvxpy.py  LQR.py  LQRSSE.py  MPC_OSQP.py  MPC_cvxpy.py  PID.py  PID_incremental.py
src/cpsim/formal/: gaussian_distribution.py  reachability.py  strip.py  zonotope.py
src/cpsim/observers/: full_state_bound.py  full_state_bound_nonlinear.py  interval_helpers.py
src/cpsim/utils/: linearizer.py
src/examples/: 1_CSTR_simulation.py  CSTR_bias.py  Quad_delay.py  Quad_replay.py  compare_all.py  quad_actuator_delay.py  settings.py
src/examples/actuator_attack/: inverted_pendulum_replay.py  lane_keeping_replay.py  motor_actuator_delay.py  motor_replay.py  quad_replay.py  (+2 more)
src/utils/: simulator.py
(+81 files in other folders)
