[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CPSim"
version = "0.0.1"
authors = [
  { name="Lin Zhang", email="lzhan120@syr.edu" },
]
maintainers = []
description = "Simulation and Security Toolbox for Cyber-Physical Systems"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://sim.cpsec.org/en/latest/"
"Bug Tracker" = "https://github.com/lion-zhang/CPSim/issues"